--- a/MazesAndMinotaurs.Core/MazesAndMinotaurs.Core.csproj
+++ b/MazesAndMinotaurs.Core/MazesAndMinotaurs.Core.csproj
@@ -50,6 +50,7 @@
     <Compile Include="RacketMazeGenerator\Generator.cs" />
     <Compile Include="RacketMazeGenerator\Maze.cs" />
     <Compile Include="RacketMazeGenerator\Room.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="TerminalExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
