--- a/MazesAndMinotaurs.ConsoleTarget/MazesAndMinotaurs.ConsoleTarget.csproj
+++ b/MazesAndMinotaurs.ConsoleTarget/MazesAndMinotaurs.ConsoleTarget.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ui\App.cs" />
     <Compile Include="Ui\BorderControl.cs" />
+    <Compile Include="Ui\BorderTheme.cs" />
+    <Compile Include="Ui\Composite.cs" />
     <Compile Include="Ui\Control.cs" />
     <Compile Include="Ui\KeyPressedResult.cs" />
     <Compile Include="Ui\Menu.cs" />
