--- a/MazesAndMinotaurs.ConsoleTarget/MazesAndMinotaurs.ConsoleTarget.csproj
+++ b/MazesAndMinotaurs.ConsoleTarget/MazesAndMinotaurs.ConsoleTarget.csproj
@@ -50,10 +50,12 @@
     <Compile Include="Ui\BorderControl.cs" />
     <Compile Include="Ui\BorderTheme.cs" />
     <Compile Include="Ui\CanvasContainerControl.cs" />
+    <Compile Include="Ui\ColorTheme.cs" />
     <Compile Include="Ui\ContainerControl.cs" />
     <Compile Include="Ui\Control.cs" />
     <Compile Include="Ui\Controls.cs" />
     <Compile Include="Ui\Events\KeyPressedEventArgs.cs" />
+    <Compile Include="Ui\IFocusAwareObject.cs" />
     <Compile Include="Ui\MenuControl.cs" />
     <Compile Include="Ui\PagesContainerControl.cs" />
     <Compile Include="Ui\Tests\BorderControlTests.cs" />
@@ -70,6 +72,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
