grid, etalon tests for border & menu

--- a/MazesAndMinotaurs.ConsoleTarget/MazesAndMinotaurs.ConsoleTarget.csproj
+++ b/MazesAndMinotaurs.ConsoleTarget/MazesAndMinotaurs.ConsoleTarget.csproj
@@ -55,12 +55,14 @@
     <Compile Include="Ui\Control.cs" />
     <Compile Include="Ui\Controls.cs" />
     <Compile Include="Ui\Events\KeyPressedEventArgs.cs" />
+    <Compile Include="Ui\GridContainerControl.cs" />
     <Compile Include="Ui\IFocusAwareObject.cs" />
     <Compile Include="Ui\MenuControl.cs" />
     <Compile Include="Ui\PagesContainerControl.cs" />
     <Compile Include="Ui\Tests\BorderControlTests.cs" />
     <Compile Include="Ui\Tests\CanvasContainerControlTest.cs" />
     <Compile Include="Ui\Tests\DummyTerminal.cs" />
+    <Compile Include="Ui\Tests\EtalonTests.cs" />
     <Compile Include="Ui\Tests\PagesContainerControlTest.cs" />
     <Compile Include="Ui\Tests\TestTerminal.cs" />
   </ItemGroup>
