--- a/MazesAndMinotaurs.Core/MazesAndMinotaurs.Core.csproj
+++ b/MazesAndMinotaurs.Core/MazesAndMinotaurs.Core.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,15 +47,26 @@
     <Compile Include="AbstractTerminal.cs" />
     <Compile Include="BufferTerminal.cs" />
     <Compile Include="Generators.cs" />
+    <Compile Include="ICollectionItem.cs" />
     <Compile Include="IGenerator.cs" />
+    <Compile Include="INotifyPropertyChangedExtended.cs" />
     <Compile Include="ITerminal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyChangedExtendedEventArgs.cs" />
     <Compile Include="RacketMazeGenerator\Corridor.cs" />
     <Compile Include="RacketMazeGenerator\Generator.cs" />
     <Compile Include="RacketMazeGenerator\Maze.cs" />
     <Compile Include="RacketMazeGenerator\Room.cs" />
+    <Compile Include="SmartCollection.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="TerminalExtensions.cs" />
+    <Compile Include="Tests\SmartCollectionTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
