--- a/MazesAndMinotaurs.Ui/MazesAndMinotaurs.Ui.csproj
+++ b/MazesAndMinotaurs.Ui/MazesAndMinotaurs.Ui.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3A64591C-07D9-4B58-BDAA-DF6F112AE297}</ProjectGuid>
+    <ProjectGuid>{2E51B805-176F-406D-A584-72FB925CB402}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MazesAndMinotaurs.Core</RootNamespace>
-    <AssemblyName>MazesAndMinotaurs.Core</AssemblyName>
+    <RootNamespace>MazesAndMinotaurs.Ui</RootNamespace>
+    <AssemblyName>MazesAndMinotaurs.Ui</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -44,30 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractTerminal.cs" />
-    <Compile Include="BufferTerminal.cs" />
-    <Compile Include="CoreExtensions.cs" />
-    <Compile Include="Generators.cs" />
-    <Compile Include="ICollectionItem.cs" />
-    <Compile Include="IGenerator.cs" />
-    <Compile Include="INotifyPropertyChangedExtended.cs" />
-    <Compile Include="ITerminal.cs" />
+    <Compile Include="Adapters\IKeyboardAdapter.cs" />
+    <Compile Include="ColorTheme.cs" />
+    <Compile Include="Control.cs" />
+    <Compile Include="Controls\Menu.cs" />
+    <Compile Include="Events\KeyPressedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PropertyChangedExtendedEventArgs.cs" />
-    <Compile Include="RacketMazeGenerator\Corridor.cs" />
-    <Compile Include="RacketMazeGenerator\Generator.cs" />
-    <Compile Include="RacketMazeGenerator\Maze.cs" />
-    <Compile Include="RacketMazeGenerator\Room.cs" />
-    <Compile Include="SmartCollection.cs" />
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="TerminalExtensions.cs" />
-    <Compile Include="Tests\SmartCollectionTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MazesAndMinotaurs.Core\MazesAndMinotaurs.Core.csproj">
+      <Project>{3a64591c-07d9-4b58-bdaa-df6f112ae297}</Project>
+      <Name>MazesAndMinotaurs.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
