--- a/MazesAndMinotaurs.Ui/MazesAndMinotaurs.Ui.csproj
+++ b/MazesAndMinotaurs.Ui/MazesAndMinotaurs.Ui.csproj
@@ -45,11 +45,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapters\IKeyboardAdapter.cs" />
+    <Compile Include="BorderTheme.cs" />
     <Compile Include="ColorTheme.cs" />
     <Compile Include="Control.cs" />
+    <Compile Include="Controls\Border.cs" />
     <Compile Include="Controls\Menu.cs" />
     <Compile Include="Events\KeyPressedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\EtalonTests.cs" />
+    <Compile Include="Tests\FocusTests.cs" />
+    <Compile Include="Tests\TestKey.cs" />
+    <Compile Include="Tests\TestKeyboardAdapter.cs" />
+    <Compile Include="Tests\TestTerminal.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MazesAndMinotaurs.Core\MazesAndMinotaurs.Core.csproj">
@@ -59,6 +66,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
