--- a/MazesAndMinotaurs.Ui/MazesAndMinotaurs.Ui.csproj
+++ b/MazesAndMinotaurs.Ui/MazesAndMinotaurs.Ui.csproj
@@ -51,8 +51,10 @@
     <Compile Include="ControlsCollection.cs" />
     <Compile Include="Controls\Containers\Border.cs" />
     <Compile Include="Controls\Container.cs" />
+    <Compile Include="Controls\Containers\Grid.cs" />
     <Compile Include="Controls\Containers\Pages.cs" />
     <Compile Include="Controls\Menu.cs" />
+    <Compile Include="Controls\Label.cs" />
     <Compile Include="Events\KeyPressedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\EtalonTests.cs" />
