--- a/MazesAndMinotaurs.Ui/MazesAndMinotaurs.Ui.csproj
+++ b/MazesAndMinotaurs.Ui/MazesAndMinotaurs.Ui.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\EtalonTests.cs" />
     <Compile Include="Tests\FocusTests.cs" />
+    <Compile Include="Tests\PagesTests.cs" />
     <Compile Include="Tests\TestKey.cs" />
     <Compile Include="Tests\TestKeyboardAdapter.cs" />
     <Compile Include="Tests\TestTerminal.cs" />
