--- a/MazesAndMinotaurs.SfmlTarget/MazesAndMinotaurs.SfmlTarget.csproj
+++ b/MazesAndMinotaurs.SfmlTarget/MazesAndMinotaurs.SfmlTarget.csproj
@@ -60,6 +60,14 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SfmlTerminal.cs" />
+    <Compile Include="Ui\Border.cs" />
+    <Compile Include="Ui\Glyph.cs" />
+    <Compile Include="Ui\Glyphs\CharGlyph.cs" />
+    <Compile Include="Ui\Grid.cs" />
+    <Compile Include="Ui\KeyboardAdapter.cs" />
+    <Compile Include="Ui\Label.cs" />
+    <Compile Include="Ui\Menu.cs" />
+    <Compile Include="Ui\Pages.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -68,6 +76,10 @@
     <ProjectReference Include="..\MazesAndMinotaurs.Core\MazesAndMinotaurs.Core.csproj">
       <Project>{3a64591c-07d9-4b58-bdaa-df6f112ae297}</Project>
       <Name>MazesAndMinotaurs.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MazesAndMinotaurs.Ui\MazesAndMinotaurs.Ui.csproj">
+      <Project>{2e51b805-176f-406d-a584-72fb925cb402}</Project>
+      <Name>MazesAndMinotaurs.Ui</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
