--- a/Sokoban/Sokoban.csproj
+++ b/Sokoban/Sokoban.csproj
@@ -4,17 +4,19 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C69BF3FB-F6FB-4FE7-9F27-B124AB4D0308}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{8C71C2D6-7BFE-460C-851B-38D07497B8BB}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MazesAndMinotaurs.SfmlTarget</RootNamespace>
-    <AssemblyName>MazesAndMinotaurs.SfmlTarget</AssemblyName>
+    <RootNamespace>Sokoban</RootNamespace>
+    <AssemblyName>Sokoban</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,6 +26,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -58,20 +61,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="KeyboardAdapter.cs" />
+    <Compile Include="Glyph.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SfmlTerminal.cs" />
+    <Compile Include="Terminal.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="cp437_16x16.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MazesAndMinotaurs.Core\MazesAndMinotaurs.Core.csproj">
       <Project>{3a64591c-07d9-4b58-bdaa-df6f112ae297}</Project>
       <Name>MazesAndMinotaurs.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MazesAndMinotaurs.SfmlTarget\MazesAndMinotaurs.SfmlTarget.csproj">
+      <Project>{c69bf3fb-f6fb-4fe7-9f27-b124ab4d0308}</Project>
+      <Name>MazesAndMinotaurs.SfmlTarget</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MazesAndMinotaurs.Ui\MazesAndMinotaurs.Ui.csproj">
-      <Project>{2E51B805-176F-406D-A584-72FB925CB402}</Project>
+      <Project>{2e51b805-176f-406d-a584-72fb925cb402}</Project>
       <Name>MazesAndMinotaurs.Ui</Name>
     </ProjectReference>
   </ItemGroup>
