--- a/Sokoban/Sokoban.csproj
+++ b/Sokoban/Sokoban.csproj
@@ -61,10 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameControl.cs" />
     <Compile Include="Glyph.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Terminal.cs" />
+    <Compile Include="TerminalWithOffset.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
