--- a/Sokoban.Core/Sokoban.Core.csproj
+++ b/Sokoban.Core/Sokoban.Core.csproj
@@ -51,11 +51,18 @@
     <Compile Include="IGlyphProvider.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="LevelControl.cs" />
+    <Compile Include="LevelProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="TerminalWithOffset.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Resources\Zone_26.slc" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MazesAndMinotaurs.Core\MazesAndMinotaurs.Core.csproj">
@@ -66,6 +73,12 @@
       <Project>{2e51b805-176f-406d-a584-72fb925cb402}</Project>
       <Name>MazesAndMinotaurs.Ui</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
