--- a/MazesAndMinotaurs.Ui/MazesAndMinotaurs.Ui.csproj
+++ b/MazesAndMinotaurs.Ui/MazesAndMinotaurs.Ui.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapters\IKeyboardAdapter.cs" />
+    <Compile Include="Adapters\IMouseAdapter.cs" />
     <Compile Include="BorderTheme.cs" />
     <Compile Include="ColorTheme.cs" />
     <Compile Include="Control.cs" />
@@ -58,7 +59,7 @@
     <Compile Include="Controls\Menu.cs" />
     <Compile Include="Controls\Label.cs" />
     <Compile Include="ControlUtils.cs" />
-    <Compile Include="Events\KeyPressedEventArgs.cs" />
+    <Compile Include="Events\InputEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\EtalonTests.cs" />
     <Compile Include="Tests\FocusTests.cs" />
