--- a/MazesAndMinotaurs.SfmlTarget/MazesAndMinotaurs.SfmlTarget.csproj
+++ b/MazesAndMinotaurs.SfmlTarget/MazesAndMinotaurs.SfmlTarget.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="KeyboardAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SfmlInput.cs" />
     <Compile Include="SfmlTerminal.cs" />
   </ItemGroup>
   <ItemGroup>
