--- a/Sokoban.SfmlTarget/Sokoban.SfmlTarget.csproj
+++ b/Sokoban.SfmlTarget/Sokoban.SfmlTarget.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="ColorAwareGlyph.cs" />
     <Compile Include="Glyph.cs" />
+    <Compile Include="MouseAdapter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SfmlColorProvider.cs" />
