--- a/Sokoban.Core/Sokoban.Core.csproj
+++ b/Sokoban.Core/Sokoban.Core.csproj
@@ -36,6 +36,10 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +52,7 @@
   <ItemGroup>
     <Compile Include="GameControl.cs" />
     <Compile Include="IColorProvider.cs" />
+    <Compile Include="IExtendedLevelFormat.cs" />
     <Compile Include="IGlyphProvider.cs" />
     <Compile Include="ILevelFormat.cs" />
     <Compile Include="ILevelProvider.cs" />
@@ -62,9 +67,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="TerminalWithOffset.cs" />
+    <Compile Include="Tests\LevelCreatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="Resources\Original.slc" />
     <None Include="Resources\Zone_26.slc" />
   </ItemGroup>
