level to string method & tests

--- a/Sokoban.Core/Sokoban.Core.csproj
+++ b/Sokoban.Core/Sokoban.Core.csproj
@@ -68,6 +68,9 @@
     </Compile>
     <Compile Include="TerminalWithOffset.cs" />
     <Compile Include="Tests\LevelCreatorTests.cs" />
+    <Compile Include="Tests\LevelToStringTests.cs" />
+    <Compile Include="Tests\TestExtendedLevelFormat.cs" />
+    <Compile Include="Tests\TestLevelFormat.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
