--- a/Sokoban.Core/Sokoban.Core.csproj
+++ b/Sokoban.Core/Sokoban.Core.csproj
@@ -60,6 +60,7 @@
     <Compile Include="LevelCreator.cs" />
     <Compile Include="LevelControl.cs" />
     <Compile Include="LevelProvider.cs" />
+    <Compile Include="Lurd.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -70,6 +71,7 @@
     <Compile Include="Tests\CompleteTests.cs" />
     <Compile Include="Tests\LevelCreatorTests.cs" />
     <Compile Include="Tests\LevelToStringTests.cs" />
+    <Compile Include="Tests\LurdTests.cs" />
     <Compile Include="Tests\MovementTests.cs" />
     <Compile Include="Tests\TestExtendedLevelFormat.cs" />
     <Compile Include="Tests\TestLevelFormat.cs" />
