a* pathfinding & based on sokoban code tests

--- a/Sokoban.Core/Sokoban.Core.csproj
+++ b/Sokoban.Core/Sokoban.Core.csproj
@@ -68,6 +68,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="TerminalWithOffset.cs" />
+    <Compile Include="Tests\AStarTests.cs" />
     <Compile Include="Tests\CompleteTests.cs" />
     <Compile Include="Tests\LevelCreatorTests.cs" />
     <Compile Include="Tests\LevelToStringTests.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="Tests\MovementTests.cs" />
     <Compile Include="Tests\TestExtendedLevelFormat.cs" />
     <Compile Include="Tests\TestLevelFormat.cs" />
+    <Compile Include="Tests\TestTerminal.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
