--- a/MazesAndMinotaurs.Core/MazesAndMinotaurs.Core.csproj
+++ b/MazesAndMinotaurs.Core/MazesAndMinotaurs.Core.csproj
@@ -54,6 +54,7 @@
     <Compile Include="INotifyPropertyChangedExtended.cs" />
     <Compile Include="ITerminal.cs" />
     <Compile Include="Pathfinding\AStar.cs" />
+    <Compile Include="Pathfinding\AStarBuilder.cs" />
     <Compile Include="Pathfinding\IDistanceProvider.cs" />
     <Compile Include="Pathfinding\INeighborsProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
